[package]
name = "avaro"
description = "a plain text double-accounting tool which is compatible with avaro but more powerful"
license = "MIT"
version = "0.0.2-alpha.1"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.1"
regex = "1.4.1"
chrono = { version = "0.4.19", features = ["serde"] }
strum = { version = "0.19.5", features = ["derive"] }
strum_macros = "0.19.4"
snailquote = "0.3.0"
indexmap = { version = "1.6.0", features = ["serde-1"] }
bigdecimal = { version = "0.2.0", features = ["serde"] }
itertools = "0.9.0"
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.21"
unicode_categories = "0.1.1"
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.6"

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }
