[package]
name = "zhang"
version = "0.0.1-alpha.1"
authors = ["Kilerd <blove694@gmail.com>"]
description = "a plain text double-accounting tool which is compatible with beancount but more powerful"
edition = "2018"
license = "Apache-2.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zhang-core = {version="0.1", path="../core"}
zhang-ast = {version="0.1", path="../ast"}
zhang-server = {version="0.1", path="../server"}
text-transformer = {version="0.1", path="../transformers/text"}
text-exporter = {version="0.1", path="../exporters/text"}

beancount-transformer = {version="0.1", path="../transformers/beancount"}


tokio = { version = "1", features = ['full', "tracing"] }
tokio-util = { version = "0.6", features = ["io", "compat"] }
env_logger = "0.9.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"