[package]
name = "zhang-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["chrono-tz/serde"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

[dev-dependencies]
indoc = "2"