[package]
name = "zhang-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["chrono-tz/serde"]
openapi = ["dep:gotcha_core"]

[dependencies]
serde = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
indexmap = { workspace = true }
bigdecimal = { workspace = true }
chrono-tz = { workspace = true }
gotcha_core = { workspace = true, optional = true }

chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

[dev-dependencies]
indoc = "2"