[package]
name = "zhang"
version = "0.1.0-alpha.6"
authors = ["Kilerd <blove694@gmail.com>"]
description = "a plain text double-accounting tool which is compatible with beancount but more powerful"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zhang-core = { version = "0.1", path = "../zhang-core" }
zhang-ast = { version = "0.1", path = "../zhang-ast" }
zhang-server = { version = "0.1.0-alpha.3", path = "../zhang-server" }

beancount = { version = "0.1", path = "../extensions/beancount" }

tokio = { version = "1", features = ['full', "tracing", "rt"] }
tokio-util = { version = "0.6", features = ["io", "compat"] }
env_logger = "0.9.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
self_update = "0.36"


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.6"