[package]
name = "zhang"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
description = "a plain text double-accounting tool which is compatible with beancount but more powerful"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
zhang-core = { version = "0.1", path = "../zhang-core" }
zhang-ast = { version = "0.1", path = "../zhang-ast" }
zhang-server = { version = "0.1.0-alpha.3", path = "../zhang-server" }

beancount = { version = "0.1", path = "../extensions/beancount" }

tokio = { version = "1", features = ['macros', "tracing", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["io", "compat"] }
env_logger = "0.9.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
self_update = "0.36"
opendal = { version = "0.45", default-features = false, features = ["native-tls", "services-fs", "services-s3", "services-webdav"] }

#console-subscriber = { version = "0.2.0" }
async-trait = "0.1.74"
async-recursion = "1.0.5"
http = "0.2"
urlencoding = "2.1.3"
base64 = "0.13.0"
bytes = "1.5.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
serde_json = "1"
jsonpath-rust = "0.3.5"
tower = "0.4"
mime = "0.3"
http = { version = "1", features = [] }
http-body-util = "0.1"



