[package]
name = "zhang"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
description = "a plain text double-accounting tool which is compatible with beancount but more powerful"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
zhang-core = { version = "0.1", path = "../zhang-core" }
zhang-ast = { version = "0.1", path = "../zhang-ast" }
zhang-server = { version = "0.1.0-alpha.3", path = "../zhang-server" }
beancount = { version = "0.1", path = "../extensions/beancount" }


tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
openssl = { workspace = true }

env_logger = "0.11"
self_update = "0.39"
clap = { version = "4", features = ["derive"] }
opendal = { version = "0.47", features = ["services-fs", "services-github", "services-webdav"] }

async-recursion = "1.0.5"
http2 = { package = "http", version = "0.2" }
urlencoding = "2.1.3"
minijinja = "2.8"
chrono = "0.4"
regex = "1"

[dev-dependencies]
gotcha = { workspace = true }
axum = { workspace = true }
jsonpath-rust = "0.5"
tower = "0.4"
mime = "0.3"
http-body-util = "0.1"
walkdir = "2"
tempfile = "3.8.0"