[package]
name = "zhang-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = ["uuid/js"]


[dependencies]
zhang-ast = { version = "0.1", path = "../zhang-ast" }
thiserror = "1"
log = "0.4"
itertools = "0.12"
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
unicode_categories = "0.1"
sha256 = { version = "1.5.0", features = [] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
chrono-tz = "0.8"
iana-time-zone = "0.1"
pest = "2.1"
pest_consume = "1.1"
pest_derive = "2.1"
snailquote = "0.3"
indexmap = "2"
async-trait = "0.1.74"

[dev-dependencies]
indoc = "2"
serde_json_path = "0.6"
tempfile = "3.3.0"
