[package]
name = "zhang-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[features]
default = ["iana-time-zone"]
wasm = []
plugin_runtime = ["extism"]

[dependencies]
zhang-ast = { version = "0.1", path = "../zhang-ast" }
thiserror = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
bigdecimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
chrono-tz = { workspace = true }
indexmap = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }

pest = { workspace = true }
pest_consume = { workspace = true }
pest_derive = { workspace = true }

chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
uuid = { version = "1", default-features = false, features = ["v6", "serde"] }
unicode_categories = "0.1"
sha256 = { version = "1.5.0", features = [], default-features = false }
iana-time-zone = { version = "0.1", optional = true }
snailquote = "0.3"
once_cell = "1.19"
extism = { version = "1.0", optional = true }
semver = "1.0.22"
cfg-if = "1.0.0"
minijinja = "2.8"

[dev-dependencies]
indoc = "2"
serde_json_path = "0.6"
tempfile = "3.3.0"
