[package]
name = "zhang-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[features]
frontend = ["rust-embed"]

[dependencies]
zhang-core = { version = "0.1", path = "../zhang-core", features = ["plugin_runtime"] }
zhang-ast = { version = "0.1", path = "../zhang-ast" }

base64 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
bigdecimal = { workspace = true }
indexmap = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
chrono-tz = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }

crossbeam-channel = "0.5.2"
rust-embed = { version = "8.3", optional = true }
futures = "0.3"
futures-util = "0.3"
notify = "6"
now = "0.1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
mime_guess = "2"
self_update = "0.39"
tower-http = { version = "0.5.0", features = ["cors", "limit", "auth"] }
async-stream = "0.3.5"

[build-dependencies]
chrono = { version = "0.4" }
