[package]
name = "zhang-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="zhang"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
zhang-core = {version="0.1", path="../../zhang-core"}
zhang-ast = {version="0.1", path="../../zhang-ast"}
tempfile = "3.8.0"
