[package]
name = "zhang-wasm"
version = "0.1.1"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

talc = { version = "4.4", default-features = false, features = ["lock_api", "counters"] }
zhang-core = { path = "../../zhang-core", features = ["wasm"] }
zhang-ast = { path = "../../zhang-ast" }
beancount = { path = "../../extensions/beancount" }
serde_json = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


