[package]
name = "beancount-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zhang-core = { version = "0.1", path = "../../core" }
zhang-ast = { version = "0.1", path = "../../ast" }

text-exporter = {version="0.1", path="../text"}
text-transformer = {version = "0.1", path="../../transformers/text"}