[package]
name = "beancount-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
chrono = { version = "0.4" }

zhang-core = { version = "0.1", path = "../../core" }
zhang-ast = { version = "0.1", path = "../../ast" }

beancount-transformer = {version = "0.1", path="../../transformers/beancount"}


[dev-dependencies]
indoc = "1"