[package]
name = "beancount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zhang-ast = { version = "0.1", path = "../../zhang-ast" }
zhang-core = { version = "0.1", path = "../../zhang-core" }
nom = "7"
itertools = { workspace = true }
log = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { workspace = true }
snailquote = "0.3"
latestmap = "0.2"

[dev-dependencies]
indoc = "2"